--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "zxcvbn": "^4.4.2"
   },
